# ParticleLoader

./: .gitignore  LICENSE  README.md  download.sh  example.ipynb  format.ipynb  pyproject.toml  setup.py  test.ipynb
src/particleloader/: _version.py  loader.py  utils.py
src/particleloader/Datasets/: Dataset.py  SPECTER_ee_dijets.py  SPECTER_qcd_jets.py  SPECTER_top_jets.py  __init__.py  qg_jets.py  topqcd_jets.py
src/particleloader/Datasets/hashes/: SPECTER_ee_dijets_hashes.json  SPECTER_qcd_jets_hashes.json  SPECTER_top_jets_hashes.json  topqcd_jets_hashes.json
src/toploader/: _version.py  loader.py
